--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,6 @@
                             <li><a href="{{url_for('get_cuisine')}}">Cuisines</a> </li>
                             <li><a href="{{url_for('get_alergen')}}">Alergens</a> </li>
                             <li><a href="{{url_for('get_meal_type')}}">Restrictions</a> </li>
-                            <li><a href="{{url_for('add_recipe')}}">Category</a> </li>
                             <li><a href="{{url_for('add_recipe')}}">Add recipes</a> </li>
                            
                         </ul>
@@ -48,9 +47,8 @@
                 <li><a href="{{url_for('home_page')}}">Home</a> </li>
                 <li><a href="{{url_for('get_recipes')}}">All recipes</a> </li>
                 <li><a href="{{url_for('get_cuisine')}}">Cuisines</a></li>
-                <li><a href="{{url_for('add_recipe')}}">Alergens</a> </li>
-                <li><a href="{{url_for('add_recipe')}}">Restrictions</a> </li>
-                <li><a href="{{url_for('add_recipe')}}">Category</a> </li>
+                <li><a href="{{url_for('get_alergen')}}">Alergens</a> </li>
+                <li><a href="{{url_for('get_meal_type')}}">Restrictions</a> </li>
                 <li><a href="{{url_for('add_recipe')}}">Add recipes</a> </li>
                 <li class="divider"></li>
             </div>
