--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -65,8 +65,8 @@
                         <!--<label>Ingredient #1 : </label><input type='textbox' id='textbox1'>-->
                     <!--</div>-->
                 </div>
-                <input type='button' class="waves-effect waves-light btn" value='Add Ingredient' id='addButton'>
-                <input type='button' class="waves-effect waves-light btn" value='Remove Ingredient' id='removeButton'>
+                <input type='button' class="waves-effect waves-light btn button_add" value='Add Ingredient' id='addButton'>
+                <input type='button' class="waves-effect waves-light btn button_add" value='Remove Ingredient' id='removeButton'>
 
             </div>
         </div>
