--- a/templates/base.html
+++ b/templates/base.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'>
-    <meta name="description" content="FlaskBook | A Cookbook for Pythons!">
-    <meta name="author" content="Dave ODea">
+    <meta name="description" content="CookBook">
     <title>Your cookbook </title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{url_for('static', filename='main-css/style.css')}}" type="text/css" />
-    <link rel="stylesheet" href="{{url_for('static', filename='css/hover.css')}}" type="text/css" />
 </head>
 
 <body class="body-custom">
@@ -35,7 +33,6 @@
                             <li><a href="{{url_for('add_recipe')}}">Add recipes</a> </li>
                            
                         </ul>
-
                     </div>
                 </div>
             </nav>
@@ -59,11 +56,12 @@
         <!-- ...................................................................................Container-->
     <div class="container">
 
-        {% block content %} {% endblock %}
+        {% block content %} 
+        {% endblock %}
 
     </div>
     <div class="fixed-action-btn" >
-        <div id="btn-add"> <a class="btn-floating btn-large fab-button red" href={{url_for( 'add_recipe')}}><i class="material-icons">add</i></a></div>
+        <div id="btn-add"> <a class="btn-floating btn-large fab-button red" href="{{url_for( 'add_recipe')}}"><i class="material-icons">add</i></a></div>
 
     </div>
 
@@ -136,5 +134,4 @@
 
 
 </body>
-
 </html>
