--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -11,10 +11,10 @@
                 {% else %}
                 <img class="all_recipes" src="/static/img/meal.jpg" class="responsive-img">
                 {% endif %}
-                <span class="card-title">{{recipe.title}}</span>
+                
             </div>
             <div class="card-action card-action-bgcolor">
-                <a href="{{url_for('recipe_single', recipe_id=recipe._id)}}" class="hvr-grow">{{recipe.cuisine_name}}</a>
+                <a href="{{url_for('recipe_single', recipe_id=recipe._id)}}" class="hvr-grow">{{recipe.title}}</a>
             </div>
         </div>
     </div>
